# 2024-HSPACE-Rust-LinuxKernel

./: README.md
2 - Example/240713 - Rust Basic + Linux Kernel, Week 2, Day 1/: 01_reference_to_value_moved.rs  02_reference_to_value_borrowed.rs  03_reference_to_value_mut_borrowed.rs  04_cpp_reference.cpp  05_rust_reference.rs  06_rust_assignment.rs  07_reference_to_reference.rs  08_compare_references.rs  09_reference_to_arbitrary_expression.rs  10_borrowing_local_variable.rs  11_reference_as_function_argument.rs  12_pass_reference_to_function.rs  13_returning_reference.rs  14_struct_containing_reference.rs  15_distinct_lifetime_parameters.rs  16_omitting_lifetime_parameters.rs  17_sharing_vs_mutation.rs
2 - Example/240818 - Rust Basic + Linux Kernel, Week 6, Day 2/: Cargo.toml
2 - Example/240921 - Rust Basic + Linux Kernel, Week 8, Day 1/: Cargo.toml
2 - Example/240922 - Rust Basic + Linux Kernel, Week 8, Day 2/: Cargo.toml
2 - Example/241005 - Rust Basic + Linux Kernel, Week 9, Day 1/async-chat/: Cargo.toml
3 - Assignment/240714 - Rust Basic + Linux Kernel, Week 2, Day 2/: Cargo.toml  README.md
3 - Assignment/240721 - Rust Basic + Linux Kernel, Week 3, Day 2/: README.md
3 - Assignment/240818 - Rust Basic + Linux Kernel, Week 6, Day 2/: README.md
3 - Assignment/240921 - Rust Basic + Linux Kernel, Week 8, Day 1/: README.md
3 - Assignment/240922 - Rust Basic + Linux Kernel, Week 8, Day 2/: README.md
4 - Solution/240714 - Rust Basic + Linux Kernel, Week 2, Day 2/: Cargo.toml  README.md
(+118 files in other folders)
