[package]
name = "async-chat"
version = "0.1.0"
authors = ["Chris Ohk <utilforever@gmail.com>"]
edition = "2021"

[dependencies]
async-std = { version = "1.7", features = ["unstable"] }
tokio = { version = "1.0", features = ["sync"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
